package neet.com.knowweather.activity;


import android.os.Bundle;
import android.support.v7.app.AppCompatActivity;

import neet.com.knowweather.R;

public class IndexNA extends AppCompatActivity {

    @Override
    protected void onCreate(Bundle savedInstanceState) {
        super.onCreate(savedInstanceState);
        setContentView(R.layout.activity_index_n);
    }
}
