package neet.com.knowweather.tool;

public  class GetWeather {
    static String getWeather(String weather){
        return null;
    }
}
